// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analytics Utils determineFormValidationState validation error with fields errors 1`] = `
Object {
  "action": "Validation Error",
  "label": "fooForm: name=Required",
}
`;

exports[`Analytics Utils determineFormValidationState validation error with generic error 1`] = `
Object {
  "action": "Validation Error",
  "label": "fooForm: _error=Some form level error",
}
`;

exports[`Analytics Utils determineFormValidationState validation error with nested field names are flattened 1`] = `
Object {
  "action": "Validation Error",
  "label": "fooForm: card.number=1234,card.expire=0820,name=foobar",
}
`;

exports[`Analytics Utils determineFormValidationState validation success with no syncErrors 1`] = `
Object {
  "action": "Validation Success",
  "label": "fooForm",
}
`;
